// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should render (snapshot) 1`] = `
<div
  className="input-search"
>
  <div
    className="input-search__actions"
  >
    <button
      aria-label="zoeken"
      onClick={[Function]}
    >
      <img
        alt="icon-search"
        className="input-search__actions__icon"
        src="search.svg"
      />
    </button>
  </div>
  <input
    aria-label="zoeken"
    className="input-search__input"
    name="search"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="Zoeken"
    type="text"
    value=""
  />
</div>
`;

exports[`Search should show the clear button 1`] = `
<div
  className="input-search"
>
  <div
    className="input-search__actions"
  >
    <button
      aria-label="annuleren"
      onClick={[Function]}
    >
      <img
        alt="icon-clear"
        className="input-search__actions__icon"
        src="clear.svg"
      />
    </button>
    <button
      aria-label="zoeken"
      onClick={[Function]}
    >
      <img
        alt="icon-search"
        className="input-search__actions__icon"
        src="search.svg"
      />
    </button>
  </div>
  <input
    aria-label="zoeken"
    className="input-search__input"
    name="search"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="Zoeken"
    type="text"
    value="trui"
  />
</div>
`;
